# apple-music-discord

./: .gitignore  README.md  com.user.apple-music-discord.plist  pyproject.toml  setup.sh
src/apple_music_discord/: __init__.py  main.py
